--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_view_all_data">ViewAllData</string>
     <string name="view_all_data_title">Select a Table</string>
+    <string name="search_title">Search Here</string>
 </resources>
