--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">PTMS</string>
-
     <string name="action_settings">Settings</string>
     <string name="title_activity_view_all_data">ViewAllData</string>
     <string name="view_all_data_title">Select a Table</string>
     <string name="search_title">Search Here</string>
+    <string name="title_activity_login">Login</string>
+    <string name="hello_world">Hello world!</string>
 </resources>
