--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="search_title">Search Here</string>
     <string name="title_activity_login">Login</string>
     <string name="hello_world">Hello world!</string>
+
+
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="action_search">action_search</string>
+    <string name="search_label">search label</string>
+    <string name="search_hint">search_hint</string>
 </resources>
